--- a/src/assets/scss/Sidebar.scss
+++ b/src/assets/scss/Sidebar.scss
@@ -12,17 +12,6 @@ To make sure that this sidebar is relatively consistent on all devices
     0.5 + (8.5 * 4) + 55 + 2.5 + 8
 */
 
-@keyframes slideInFromNearBottom {
-  0% {
-    transform: translateY(80%);
-    visibility: visible;
-  }
-  100% {
-    transform: translateY(0);
-    visibility: visible;
-  }
-}
-
 @keyframes slideInFromBottom {
   0% {
     transform: translateY(100%);
@@ -43,39 +32,30 @@ To make sure that this sidebar is relatively consistent on all devices
   padding-left: 5vh;
   display: block; /* Make the links appear below each other instead of side-by-side */
   text-align: center;
-}
-
-.sidebar .icon {
-  height: 6vh;
-  width: 6vh;
-  margin-bottom: 2.5vh;
-  transition: all 0.3s ease; /* Add transition for hover effects */
-}
-
-.sidebar .icon1 {
   visibility: hidden;
-  animation: 1s ease-out 1s 1 forwards slideInFromBottom; /*duration, animation behavior, delay, times to play, name*/
+  .icon {
+    height: 6vh;
+    width: 6vh;
+    margin-bottom: 2.5vh;
+    &1 {
+      animation: 1s ease-out 1s 1 forwards slideInFromBottom; /*duration, animation behavior, delay, times to play, name*/
+    }
+    &2 {
+      animation: 1s ease-out 1.25s 1 forwards slideInFromBottom; /*duration, animation behavior, delay, times to play, name*/
+    }
+    &3 {
+      animation: 1s ease-out 1.5s 1 forwards slideInFromBottom; /*duration, animation behavior, delay, times to play, name*/
+    }
+    &4 {
+      animation: 1s ease-out 1.75s 1 forwards slideInFromBottom; /*duration, animation behavior, delay, times to play, name*/
+    }
+  }
 }
 
-.sidebar .icon2 {
-  visibility: hidden;
-  animation: 1s ease-out 1.25s 1 forwards slideInFromBottom; /*duration, animation behavior, delay, times to play, name*/
-}
-
-.sidebar .icon3 {
-  visibility: hidden;
-  animation: 1s ease-out 1.5s 1 forwards slideInFromBottom; /*duration, animation behavior, delay, times to play, name*/
-}
-
-.sidebar .icon4 {
-  visibility: hidden;
-  animation: 1s ease-out 1.75s 1 forwards slideInFromBottom; /*duration, animation behavior, delay, times to play, name*/
-}
-
-.sidebar a {
-  :hover {
+.sidebar > a {
+  &:hover {
     opacity: 0.7;
-    text-decoration: none; /* Gets rid of underlining of icons */
+    transition: all 0.3s ease;
   }
 }
 
