--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css?family-Poppins:400,500,700");
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap");
 
 body {
   padding: 0;
@@ -43,28 +44,60 @@ body {
 
 .about-wrapper {
   padding-bottom: 30px;
+  height: 100vh;
   background-image: linear-gradient(to bottom, #163355f7, #a6afbaf7),
     url("../images/background/dark_background.jpg");
-}
+  .title-wrapper {
+    display: block; /* Make the links appear below each other instead of side-by-side */
+    text-align: center;
+    margin-bottom: 40px;
+    margin-top: 50px;
+    .title {
+      font-size: calc(36px + (86 - 36) * ((100vw - 600px) / (1600 - 600)));
+      margin-bottom: -25px;
+    }
+    .title-line {
+      width: calc(57px + (127 - 57) * ((100vw - 600px) / (1600 - 600)));
+      margin-bottom: 20px;
+    }
+  }
+  .image {
+    position: relative;
+    display: block;
+    height: 45vh;
+    max-width: 100%;
+    object-fit: cover;
+    border-radius: 1rem;
+    border: 3px solid #dfe3e8;
+    overflow: hidden;
+    margin: 20px auto;
+  }
 
-.about-image {
-  position: relative;
-  display: block;
-  max-width: 100%;
-  object-fit: cover;
-  border-radius: 1rem;
-  border: 3px solid #021a40;
-  overflow: hidden;
-  background-color: rgba(26, 188, 156, 0.9);
-  margin: 20px auto;
-}
-
-.about-text {
-  max-width: 100%;
-  max-height: 100%;
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
+  .text {
+    position: relative;
+    display: block;
+    margin: 50px auto;
+    max-width: 100%;
+    max-height: 100%;
+    position: relative;
+    height: 45vh;
+    font-family: Josefin Sans, sans-serif;
+    font-size: 18px;
+    line-height: normal;
+    .btn-resume {
+      background: #f5cc7c;
+      color: #0b1d24;
+      border: 3px solid #dfe3e8;
+      border-radius: 40px;
+      padding: 5px 25px;
+      font-family: Poppins, sans-serif;
+      font-size: 22px;
+      &:hover {
+        opacity: 0.7;
+        transition: all 0.3s ease;
+      }
+    }
+  }
 }
 
 .timeline-wrapper {
