--- a/src/assets/scss/Timeline.scss
+++ b/src/assets/scss/Timeline.scss
@@ -1,34 +1,10 @@
 @charset "UTF-8";
 
-.timeline-item {
-  margin: 20px 0px;
-}
-.timeline-image-parent {
-  height: 280px;
-  width: 280px;
-  object-fit: contain;
-  border-radius: 1rem;
-  border: 3px solid #021a40;
-  background-color: white;
-  margin: 0px 20px;
+.timeline-container {
+    margin: 40px auto;
+    padding-left: 50px;
 }
 
-.timeline-image {
-  position: relative;
-  display: block;
-  width: 95%;
-  height: 95%;
-  overflow: hidden;
-  object-fit: contain;
-  background-position: center;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-h4 {
-  font-size: 1.2em;
-}
-
-.timeline-text {
-  padding: 20px 0px;
+.second-link {
+    padding-left: 10px;
 }
