--- a/src/assets/scss/InterestsBar.scss
+++ b/src/assets/scss/InterestsBar.scss
@@ -3,9 +3,8 @@
 //Desktop Styles
 
 .interest-item {
-    margin: 2vh auto;
-    height: 21vh;
-    width: 60vw;
+    margin: 3vh auto;
+    width: 80vw;
     background-color: rgba(0, 0, 0, 0);
     border: 0px;
     overflow: hidden;
@@ -46,7 +45,7 @@
     border: 4px solid #dfe3e8;
     border-radius: 30px;
     z-index: 1;
-    margin-left: -140%;
+    margin-left: -90px;
 }
 
 .interest-item-title {
@@ -111,6 +110,67 @@
 .interest-item-title-mobile {
     font-family: Poppins, sans-serif;
     font-size: 14px;
+}
+
+@media all and(min-width:1500px) {
+    .interest-item {
+        margin: 2vh auto;
+        height: 10vh;
+        width: 80vw;
+        background-color: rgba(0, 0, 0, 0);
+        border: 0px;
+        overflow: hidden;
+    }
+
+    .interest-item-body-left {
+        background-color: #0b1d24;
+        border: 4px solid #f5cc7c;
+        border-radius: 30px;
+        color: #dfe3e8;
+        margin-left: -5%;
+    }
+
+    .interest-item-image-left {
+        position: absolute;
+        height: 80%;
+        width: auto;
+        top: 50%;
+        transform: translateY(-50%);
+        border: 4px solid #dfe3e8;
+        border-radius: 30px;
+        z-index: 1;
+        margin-left: 2vw;
+    }
+
+    .interest-item-body-right {
+        background-color: #0b1d24;
+        border: 4px solid #f5cc7c;
+        border-radius: 30px;
+        color: #dfe3e8;
+        margin-left: 2vw;
+    }
+
+    .interest-item-image-right {
+        position: absolute;
+        height: 80%;
+        width: auto;
+        top: 50%;
+        transform: translateY(-50%);
+        border: 4px solid #dfe3e8;
+        border-radius: 30px;
+        z-index: 1;
+        margin-left: -1vw;
+    }
+
+    .interest-item-title {
+        font-family: Poppins, sans-serif;
+        font-size: 22px;
+    }
+
+    .interest-item-text {
+        font-family: Josefin Sans, sans-serif;
+        font-size: 16px;
+    }
 }
 
 // .interest-item {
