--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -87,8 +87,7 @@ html {
 
     .text {
         position: relative;
-        margin: 35px auto;
-        margin-bottom: 50px;
+        margin: 8vh auto;
         max-width: 100%;
         max-height: 100%;
         position: relative;
