--- a/src/assets/scss/InterestsBar.scss
+++ b/src/assets/scss/InterestsBar.scss
@@ -4,7 +4,7 @@
 
 .interest-item {
     margin: 3vh auto;
-    width: 80vw;
+    width: 60vw;
     background-color: rgba(0, 0, 0, 0);
     border: 0px;
     overflow: hidden;
@@ -46,6 +46,33 @@
     border-radius: 30px;
     z-index: 1;
     margin-left: -90px;
+}
+
+.interest-item-ipad {
+    margin: 3vh auto;
+    width: 80vw;
+    background-color: rgba(0, 0, 0, 0);
+    border: 0px;
+    overflow: hidden;
+}
+
+.interest-item-body-ipad {
+    background-color: #0b1d24;
+    border: 4px solid #f5cc7c;
+    border-radius: 30px;
+    color: #dfe3e8;
+    margin-left: -5%;
+}
+
+.interest-item-image-ipad {
+    position: absolute;
+    height: 80%;
+    width: auto;
+    top: 50%;
+    transform: translateY(-50%);
+    border: 4px solid #dfe3e8;
+    border-radius: 30px;
+    z-index: 1;
 }
 
 .interest-item-title {
