--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -31,6 +31,7 @@ html {
     display: flex;
     align-items: center;
     height: 100vh;
+    width: 100vw;
     border: 0px;
     background-image: linear-gradient(to bottom, #263f5df7 10%, #163355f7 90%),
         url("../images/background/dark_background.jpg");
