added scrolling in timeline panel

--- a/src/assets/scss/Timeline.scss
+++ b/src/assets/scss/Timeline.scss
@@ -88,5 +88,11 @@
 
     .tab-content {
         margin: 5vh auto;
+        overflow: auto;
+        height: calc(
+            100vh - 400px
+        ); /* Replace 42px with the needed height. 100vh means the whole height of the browser's viewport */
+        height: -webkit-calc(100vh - 400px);
+        height: -moz-calc(100vh - 400px);
     }
 }
