--- a/src/assets/scss/CustomNavBar.scss
+++ b/src/assets/scss/CustomNavBar.scss
@@ -38,7 +38,7 @@
 }
 
 .navbar-mobile {
-    background-color: rgba(255, 255, 255, 0);
+    background: none;
 }
 
 .custom-toggler {
@@ -53,7 +53,8 @@
 .fade-enter-active,
 .fade-appear-active {
     opacity: 1;
-    animation: 0.5s ease-out 0s 1 forwards slideInFromTop; /*duration, animation behavior, delay, times to play, name*/
+    transition: opacity 1s linear;
+    //animation: 0.5s ease-out 0s 1 forwards slideInFromTop; /*duration, animation behavior, delay, times to play, name*/
 }
 
 .fade-leave {
@@ -67,4 +68,28 @@
 .fade-exit-active {
     opacity: 1;
     transition: visibility 0s 1 opacity 1s linear;
+}
+
+.custom-toggler.navbar-toggler {
+    border-color: rgb(245, 204, 124);
+}
+
+.custom-toggler .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgb(245, 204, 124, 1)' stroke-width='3' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+}
+
+.navbar-toggler {
+    border: 3px solid transparent;
+}
+
+.navbar {
+    a {
+        color: rgb(245, 204, 124);
+        font-size: 22px;
+        width: 100%;
+    }
+}
+
+#responsive-navbar-nav {
+    background-color: rgba(54, 76, 99, 0.5);
 }
